--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ footer {
     © 2022 L.B BEAUTY | כל הזכויות שמורות
 </footer>
 
-<a class="whatsapp" href="https://wa.me/972527418859" target="_blank">
+<a class="whatsapp" href="https://wa.me/+972527418859" target="_blank">
     💬
 </a>
 
