--- a/index.html
+++ b/index.html
@@ -232,17 +232,26 @@ footer {
 
 
 
-<section class="section gold" id="contact">
-    <h2>השארת פרטים</h2>
-    <form>
-        <input type="text" placeholder="שם מלא" required>
-        <input type="tel" placeholder="טלפון" required>
-        <input type="email" placeholder="אימייל">
-        <textarea placeholder="הודעה"></textarea>
-        <button type="submit">שליחה</button>
-    </form>
-</section>
-
+<
+<form
+  action="https://formspree.io/f/xpqwvzad"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+  Your name:
+    <input type="name" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
 <footer>
     © 2022 L.B BEAUTY | כל הזכויות שמורות
 </footer>
