--- a/index.html
+++ b/index.html
@@ -238,15 +238,15 @@ footer {
   method="POST"
 >
   <label>
-    Your email:
+    שם מלא:
+    <input type="text" name="name">
+  </label>
+  <label>
+  אימייל:
     <input type="email" name="email">
   </label>
   <label>
-  Your name:
-    <input type="name" name="email">
-  </label>
-  <label>
-    Your message:
+    הודעה:
     <textarea name="message"></textarea>
   </label>
   <!-- your other form fields go here -->
