--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ h2 {
     border-radius: 12px;
     box-shadow: 0 0 15px rgba(0,0,0,0.15);
 }
-.cryo p, ul {
+
+.RF p, ul {
     font-size: 18px;
     line-height: 1.8;
 	}
@@ -147,9 +148,20 @@ footer {
     text-align: center;
     padding: 20px;
 }
+/* צור קשר */
+.צור קשר {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
-/* WHATSAPP */
-.whatsapp {
+.צור קשר div {
+    text-align: center;
+	}
+	
+/*צור קשר*/
+. {
     position: fixed;
     bottom: 20px;
     left: 20px;
@@ -175,7 +187,7 @@ footer {
     <a href="#cryo">קריו סלים</a>
 	<a href="#before"><-לפני / אחרי</a></a>
 	<a href="#RF ליפטינג">RF ליפטינג</a>
-    <a href="#contact">צור קשר</a>
+    <a href="#צור קשר">צור קשר</a>
 </nav>
 
 <section class="section gold" id="cryo">
@@ -198,7 +210,7 @@ footer {
     </div>
 </section>
 
-<section class="section" id="before">
+<section class="section gold" id="before">
     <h2>לפני / אחרי</h2>
     <div class="before-after">
         <div>
@@ -226,15 +238,14 @@ footer {
                 <li>✔ משפר את הגמישות והמרקם של העור</li>
                 <li>✔ תוצאות טבעיות</li>
             </ul>
-        </div>
     </div>
 </section>
 
 
-
-<
-<form
-  action="https://formspree.io/f/xpqwvzad"
+<section class="section gold" id="צור קשר">
+    <h4>צור קשר</h4>
+    <div class="צור קשר">
+<form action="https://formspree.io/f/xpqwvzad"
   method="POST"
 >
   <label>
@@ -253,6 +264,7 @@ footer {
   <button type="submit">Send</button>
 </form>
 <footer>
+</section>
     © 2022 L.B BEAUTY | כל הזכויות שמורות
 </footer>
 
